offroad/styles/index.css
@import url('https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Rubik:wght@300&display=swap');

#content {
    max-width: 1600px;
    /*width: 100%;*/
    margin: 0 auto;
}

nav a {
    text-align: center;
    color: #1A1D1A; 
    text-decoration: none;
    padding: 35px;
}

#hero-msg h1, #hero-msg h4 {
    text-align: center;
    color: white;
}

#hero {
    display: grid;
    grid-template-columns: 1fr 1.5fr 2fr;
    grid-template-rows: .5fr 1fr ;
    margin-top: -100px; 
    margin-bottom: 150px;
}
            
#hero-box {
    grid-column: 1/4;
    grid-row: 1/3;
    z-index: -1;
}

#hero-msg {
    grid-column: 3/4;
    grid-row: 2/3;
    /*margin-top: 100px;*/
    padding: 10px
}

#hero img {
    width: 100%
}

.button-box {
    text-align: center;
    padding: 15px
}

.book {
    background-color: #FFCF33;
    color: #1A1D1A;
    text-decoration: none;
    font-size: 22px;
    padding: 15px 30px;
    margin-top: 50px;
    border-radius: 5px;
}

.book:hover {
    background-color: #1A1D1A;
    color: #FFCF33;
}

header {
    /*background-color: rgba(0,0,0,0.5);*/
    background-color: #FFCF33;
    /*padding: 15px 50px;*/
}

header {
    display: grid;
    grid-template-columns: 150px auto;
}

nav {
    display: flex;
    justify-content: space-around;
}

nav a:hover {
    background-color: #1A1D1A;
    color: #FFCF33;
}

footer {
    background-color: #FFCF33;
    color: #1A1D1A;
    padding: 25px 50px;
    margin-top: 200px;
    display: flex;
    justify-content: space-around;
    align-items: center;
}

footer a {
    color: #1A1D1A;
    text-decoration: none;
}

footer a:hover {
    color: white;
}

footer p {
    font-size: 1em;
}

footer p a:hover {
    text-decoration: underline;
}

footer .social img {
    padding-top: 15px;
}

#logo_link {
    padding-top: 5px;
    justify-self: center;
    align-self: center;
}

.logo {
    width: 80px;
}

#hero-img {
    width: 100%;
}

.home-title {
    color: black;
    font-family: 'Fredericka the Great', Helvetica, sans-serif;
    font-size: 2em;
    margin-top: 10px;
}

body {
    background-color:#fcfbfb;
    font-family: 'Rubik';
    font-size: 28px;
    margin: 0;
    padding: 0;
}

.offroad-grid {
    display: grid;
    /*grid-template-columns: 1fr 1fr;*/
    justify-items: center;
}

.cards {
    display: grid;
    grid-template-columns: 1fr 1fr;
    justify-items: center;
    grid-gap: 50px

}

.moab-sign {
    border: 10px solid #1A1D1A;
    transition: transform .5s;
    box-shadow: 5px 5px 10px #6f7364;
    grid-column: 1/2;
    justify-self: center;
    align-self: center;
    margin: 20px;
}

.tan-jeep {
    border: 10px solid #1A1D1A;
    transition: transform .5s;
    box-shadow: 5px 5px 10px #6f7364;
    grid-column: 2/3;
    justify-self: center;
    align-self: center;
    margin: 20px;
}

.package1 {
    display: grid;
    grid-template-columns: .4fr 1fr;
    margin-top: 150px;
    margin-bottom: 40px;
}

.package1 h2 {
    grid-column: 1/3;
    justify-self: center;
    padding-bottom: 50px;
}

.package1 img {
    grid-column: 1/2;
    justify-self: center;
    padding: 20px;
}

.package1 p {
    grid-column: 2/3;
    justify-self: center;
    align-self: center;
    padding: 20px;
    margin-right: 40px;
}

.package2 {
    display: grid;
    grid-template-columns: .4fr 1fr;
    justify-items: center;
    /*grid-gap: 20px*/
    margin-bottom: 40px;
}

.package2 img {
    grid-column: 1/2;
    justify-self: center;
    padding: 20px;
}

.package2 p {
    align-self: center;
    padding: 20px;
    margin-right: 40px;
}

.bring-items {
    display: grid;
    grid-template-columns: .4fr 1fr;
    justify-items: center;
}

.bring-items img {
    grid-column: 1/2;
    justify-self: center;
    padding: 20px;
}

.bring-items p {
    align-self: center;
    padding: 20px;
    margin-right: 40px;
}

/* Vehicles CSS*/

.vehicles-grid {
    display: grid;
    justify-items: center;
    
}

.jeep {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: .25fr 1fr;
    justify-items: center;
    grid-gap: 20px
}
.jeep ul {
    grid-column: 2/3;
    grid-row: 2/3;
    padding: 50px;
    text-align: left;
}

.jeep_rubicon {
    border: 10px solid #FFCF33;
    transition: transform .5s;
    box-shadow: 5px 5px 10px #6f7364;
    grid-column: 1/2;
    grid-row: 2/3;
    justify-self: center;
    align-self: center;
}

.jeep h2 {
    grid-column: 1/3;
    grid-row: 1/2;
    align-self: end;
    color: #1A1D1A;
}

.polaris {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: .25fr 1fr;
    justify-items: center;
    grid-gap: 20px;
}
.rzr {
    border: 10px solid #FFCF33;
    transition: transform .5s;
    box-shadow: 5px 5px 10px #6f7364;
    grid-column: 1/2;
    grid-row: 2/3;
    justify-self: center;
    align-self: center;
}

.polaris ul {
    grid-column: 2/3;
    grid-row: 2/3;
    padding: 50px;
    text-align: left;
}

.polaris h2 {
    grid-column: 1/3;
    grid-row: 1/2;
    align-self: end;
    color: #1A1D1A;
}

.canam {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: .25fr 1fr;
    justify-items: center;
    grid-gap: 20px;
}

.maverik {
    border: 10px solid #FFCF33;
    transition: transform .5s;
    box-shadow: 5px 5px 10px #6f7364;
    grid-column: 1/2;
    grid-row: 2/3;
    justify-self: center;
    align-self: center;
}

.canam ul {
    grid-column: 2/3;
    grid-row: 2/3;
    padding: 50px;
    text-align: left;
}

.canam h2 {
    grid-column: 1/3;
    grid-row: 1/2;
    align-self: end;
    color: #1A1D1A;
}

li {
    margin-bottom: 20px;
}

